--- a/.travis.yml
+++ b/.travis.yml
@@ -3,19 +3,15 @@ language: go
 os:
   - linux
   - osx
-  - windows
 
 go:
   - tip
   - "1.10"
   - 1.9
-  - 1.8
-  - 1.7
-  - 1.6
-  - 1.5
-  - 1.4
   - 1.3
 
 install:
   - go get github.com/issue9/assert
   - go get github.com/issue9/autoinc
+
+script: go test -race -v ./...
