--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,4 +12,4 @@ before_test:
   - go vet ./...
 
 test_script:
-  - go test -v -coverprofile=coverage.txt -covermode=atomic ./...
+  - go test -race -v -coverprofile=coverage.txt -covermode=atomic ./...
