--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -6,12 +6,12 @@ jobs:
   test:
     name: Test
     runs-on: ${{ matrix.os }}
-    
+
     strategy:
       matrix:
         os: [ubuntu-latest, macOS-latest, windows-latest]
-        go: ['1.17.x', '1.22.x']
-        
+        go: ['1.22.x']
+
     steps:
 
       - name: Check out code into the Go module directory
@@ -25,11 +25,12 @@ jobs:
 
       - name: Vet
         run: go vet -v ./...
-        
+
       - name: Test
         run: go test -v -coverprofile='coverage.txt' -covermode=atomic ./...
 
       - name: Upload Coverage report
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v4
         with:
           file: ./coverage.txt
+          token: ${{ secrets.CODECOV_TOKEN }}
